[package]
name = "bno055-async"
description = "Bosch Sensortec BNO055 9-axis IMU driver"
version = "0.1.0" # Remember to update lib.rs
authors = [
  "Eugene P. <eupn@protonmail.com>",
  "Henrik B. <hargonix@gmail.com>",
  "Alachie Y. <rtificr@gmail.com>",
]
repository = "https://github.com/Rtificer/bno055-async"
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "bno055", "async"]
license-file = "GPL-3.0-or-later"
readme = "README.md"

# linux-embedded-hal requires 1.65 because of nix
rust-version = "1.65"

[dependencies]
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }
mint = "^0.5.9"
bitflags = "2.11.0"
defmt = { version = "1.0.1", optional = true }

num_enum = { version = "0.7.2", default-features = false }

embedded-hal-async = "1.0.0"
zerocopy = "0.8.48"
zerocopy-derive = "0.8.48"

[features]
default = []
std = []

defmt-03 = ["dep:defmt", "embedded-hal-async/defmt-03"]
serde = ["dep:serde", "mint/serde"]

[dev-dependencies]
linux-embedded-hal = "0.4"
